# scripts

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  EmbarkAnywhere_v50.lua  LiquidEmbarkAnywhere_v50.lua  adaptation-lua.lua  adaptation.lua  adaptation.rb  add-recipe.lua  add-thought.lua  agitation-rebalance.lua  allneeds.lua  animal-control.lua  armoks-blessing.lua  assign-goals.lua  assign-minecarts.lua  assign-preferences.lua  assign-profile.lua  autofish.lua  autonick.lua  autounsuspend.lua  ban-cooking.lua  bodyswap.lua  build-now.lua  burial.lua  caravan.lua  catsplosion.lua  change-adventurer.lua  changelog.txt  clear-webs.lua  combat-harden.lua  combine  combine.lua  confirm.lua  control-panel.lua  deathcause.lua  deathcause.rb  deep-embark.lua  deteriorate.lua  dfhack-quickstart-guide.lua  (+96 more)
devel/: all-bob.lua  annc-monitor.lua  block-borders.lua  check-release.lua  dump-offsets.lua  eventful-client.lua  export-dt-ini.lua  find-offsets.lua  hello-world.lua  input-monitor.lua  inspect-screen.lua  luacov.lua  make-dt.pl  pop-screen.lua  prepare-save.lua  query.lua  save-version.lua  sc.lua  scan-vtables.lua  scanitemother.lua  tile-browser.lua  unforbidall.lua  unit-path.lua  visualize-structure.lua
docs/: adaptation.rst  add-recipe.rst  add-thought.rst  adv-fix-sleepers.rst  adv-max-skills.rst  adv-rumors.rst  agitation-rebalance.rst  allneeds.rst  animal-control.rst  armoks-blessing.rst  assign-attributes.rst  assign-beliefs.rst  assign-facets.rst  assign-goals.rst  assign-minecarts.rst  assign-preferences.rst  assign-profile.rst  assign-skills.rst  (+147 more)
(+347 files in other folders)
